# cicd-yolo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Justfile  pyproject.toml
.github/workflows/: ci-cd.yml
docker/: Dockerfile  docker-compose.yml  docker.README.md
src/cicd_yolo/: __init__.py  model.py
tests/: test_main.py
