[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cicd-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "torch>=2.9.1",
    "ultralytics>=8.3.239",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
]
